--- a/webapp/view/DetailPage.view.xml
+++ b/webapp/view/DetailPage.view.xml
@@ -4,7 +4,7 @@
             <ObjectHeader id="HeaderDetail" title="{Name1}" icon="sap-icon://business-card" number="{Lifnr}" numberState="None" titleActive="false" backgroundDesign="Translucent" condensed="false" visible="true">
                 <ObjectAttribute id="HeaderAttribute" text="NIF: {Stceg}" />
             </ObjectHeader>
-            <Table id="DetailTable" headerText="Contratos" items="{ContratoSet}"  noDataText="No Data" mode="SingleSelectLeft" growing="true" growingScrollToLoad="true">
+            <Table id="DetailTable" headerText="{i18n>ctrs}" items="{ContratoSet}"  noDataText="No Data" mode="SingleSelectLeft" growing="true" growingScrollToLoad="true">
                 <columns>
                     <Column id="contrato">
                         <header>
@@ -42,8 +42,8 @@
         <footer>
 			<OverflowToolbar>
 				<ToolbarSpacer/>
-				<Button id="create" icon="sap-icon://create" text="Create" type="Accept" press="onCreate" />
-				<Button id="delete" icon="sap-icon://delete" text="Delete" type="Reject" press="onDelete" />
+				<Button id="create" icon="sap-icon://create" text="{i18n>crea}" type="Accept" press="onCreate" />
+				<Button id="delete" icon="sap-icon://delete" text="{i18n>dele}" type="Reject" press="onDelete" />
 			</OverflowToolbar>
         </footer>
     </Page>
