--- a/webapp/view/EditPage.view.xml
+++ b/webapp/view/EditPage.view.xml
@@ -14,7 +14,7 @@
                     id="formEdit"
                     editable="false"
                     layout="ResponsiveGridLayout"
-                    title="Criação de Contrato"
+                    title="{i18n>formTitle}"
                     labelSpanXL="3"
                     labelSpanL="3"
                     labelSpanM="3"
@@ -30,10 +30,10 @@
                 >
                     <f:content>
                         <Label text="{i18n>ini}" />
-                        <DatePicker id="dataInicio" placeholder="Data de Início" valueFormat="dd-MM-yyyy" dateValue="{DataInicio}" />
+                        <DatePicker id="dataInicio" placeholder="{i18n>dataIni}" valueFormat="dd-MM-yyyy" dateValue="{DataInicio}" />
                         <Text />
                         <Label text="{i18n>Fim}" />
-                        <DatePicker id="dataFim" placeholder="Data de Fim" valueFormat="dd-MM-yyyy" dateValue="{DataFim}"/>
+                        <DatePicker id="dataFim" placeholder="{i18n>dataFim}" valueFormat="dd-MM-yyyy" dateValue="{DataFim}"/>
                         <Text />
                         <Label text="{i18n>ff}" />
                         <Input id="supplierInput" value="{FornecedorDivergente}" showSuggestion="true" showValueHelp="true" valueHelpRequest=".onValueHelpRequest" suggestionItems="{/FornecedorSet}" editable="{Edit}">
@@ -52,7 +52,7 @@
                 multiple="true"
                 sameFilenameAllowed="true"
                 instantUpload="false"
-                noDataDescription="Drop files or use the &quot;Add&quot; button to keep files ready for upload"
+                noDataDescription="{i18n>drop}"
                 change="onChange"
                 uploadComplete="onUploadComplete"
                 beforeUploadStarts="onBeforeUploadStarts"
@@ -81,8 +81,8 @@
         <footer>
             <OverflowToolbar>
                 <ToolbarSpacer />
-                <Button id="save" icon="sap-icon://create" text="Gravar" type="Accept" press="onSave" />
-                <Button id="canc" icon="sap-icon://sys-cancel" text="Cancelar" type="Reject" press="onCanc" />
+                <Button id="save" icon="sap-icon://create" text="{i18n>save}" type="Accept" press="onSave" />
+                <Button id="canc" icon="sap-icon://sys-cancel" text="{i18n>canc}" type="Reject" press="onCanc" />
             </OverflowToolbar>
         </footer>
     </Page>
