--- a/webapp/view/EditPage.view.xml
+++ b/webapp/view/EditPage.view.xml
@@ -71,9 +71,9 @@
                         deletePress=".onFileDeleted"
                         url="{ parts: ['ContratoFactoring','FileName'], formatter: '.formatter.formatUrl' }">
                                     <attributes>
-                                        <ObjectAttribute title="{i18n>cpr} {CreatByName} 
-                                                                {i18n>e} { path: 'Creaton', type: 'sap.ui.model.type.Date', formatOptions: {pattern: 'dd-MM-yyyy'}} 
-                                                                {i18n>h} { path: 'Creatime', formatter: '.formatter.formatTime' }"></ObjectAttribute>
+                                        <ObjectAttribute id='objAttrib' title="{i18n>cpr} {CreatByName} 
+                                                                        {i18n>e} { path: 'Creaton', type: 'sap.ui.model.type.Date', formatOptions: {pattern: 'dd-MM-yyyy'}} 
+                                                                        {i18n>h} { path: 'Creatime', formatter: '.formatter.formatTime' }"></ObjectAttribute>
                                     </attributes>
                     </UploadCollectionItem>
                 </items>
